Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,9 +6,8 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-    <form>
-      method="post" action="/">
-  <p>Input the text you want analyzed here:</p>
+    <form method="post" action="/">
+  <p>Pig Latinizer!</p>
   <textarea name="user_text"></textarea>
   <br>
   <button type="submit" value="submit">Submit</button>
