Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,7 +8,7 @@
     <h1>Pig Latinizer</h1>
     <form method="post" action="/">
   <p>Pig Latinizer!</p>
-  <textarea name="user_text"></textarea>
+  <textarea name="Enter your phrase:"></textarea>
   <br>
   <button type="submit" value="submit">Submit</button>
       
