--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,12 +5,11 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-    <form method="post" action="/">
-  <p>Pig Latinizer!</p>
-  <textarea name="Enter your phrase:"></textarea>
-  <br>
-  <button type="submit" value="submit">Submit</button>
+     <h1>Pig Latinizer!</h1>
+    <form method="POST" action="/piglatinize">
+      <label for="phrase">Enter your phrase:</label>
+      <input type="text" id="phrase" name='user_phrase'>
+      <input type="submit">
       
       
     </form>
